--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <p class="lead">Come on in to view your matches... all you need to do is Sign Up!</p>
         <div class="text-center">
             <button class="btn btn-primary btn-lg mr-2" (click)="registerModeToggle()">Register</button>
-            <button class="btn btn-info btn-lg mr-2">Learn more</button>
+            <button class="btn btn-secondary btn-lg mr-2">Learn more</button>
         </div>
     </div>
 
