--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,34 +1,35 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="https://localhost:4200">Dating App</a>
+        <a class="navbar-brand" routerLink="/">Dating App</a>
 
-        <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Matches</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Lists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Messages</a>
-            </li>
+        <ul class="navbar-nav mr-auto">
+            <ng-container *ngIf="accountService.currentUser$ | async">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+                </li>
+            </ng-container>
         </ul>
 
-        <div *ngIf="accountService.currentUser$ | async" class="btn-group" dropdown>
+        <div *ngIf="(accountService.currentUser$ | async) as user" class="btn-group" dropdown>
             <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
-                    aria-controls="dropdown-basic">
-                    Welcome User <span class="caret"></span>
+                aria-controls="dropdown-basic">
+                Welcome {{user.username | titlecase}} <span class="caret"></span>
             </button>
-            <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
-                role="menu" aria-labelledby="button-basic">
-              <li role="menuitem"><a class="dropdown-item" href="#">Edit Profile</a></li>
-              <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
-              <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
-              <li class="divider dropdown-divider"></li>
-              <li role="menuitem"><a class="dropdown-item" (click)="logout()">Logout</a>
-              </li>
+            <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
+                <li role="menuitem"><a class="dropdown-item" href="#">Edit Profile</a></li>
+                <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+                <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
+                <li class="divider dropdown-divider"></li>
+                <li role="menuitem"><a class="dropdown-item" (click)="logout()">Logout</a>
+                </li>
             </ul>
-          </div>
+        </div>
 
         <!-- <div class="dropdown">
             <a class="dropdown-toggle text-light">Welcome User</a>
@@ -38,12 +39,13 @@
             </div>
         </div> -->
 
-        <form *ngIf="!(accountService.currentUser$ | async)" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
+        <form *ngIf="!(accountService.currentUser$ | async)" #loginForm="ngForm" class="form-inline mt-2 mt-md-0"
+            (ngSubmit)="login()" autocomplete="off">
             <input class="form-control mr-sm-2" type="text" placeholder="Username" name="username"
                 [(ngModel)]="model.username">
             <input class="form-control mr-sm-2" type="password" placeholder="Password" name="password"
                 [(ngModel)]="model.password">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Login</button>
         </form>
     </div>
 </nav>
